<resources>
    <string name="app_name">newCalculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="sum">+</string>
    <string name="difference">-</string>
    <string name="count">=</string>
    <string name="dot">.</string>
    <string name="clear">C</string>
    <string name="opening_parenthesis">(</string>
    <string name="closing_parenthesis">)</string>
    <string name="error">error</string>
</resources>
