<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.hfad.newcalculator.calculatorActivity">

    <TextView
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:stretchColumns="0, 1, 2, 3"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/erase"
                style="@android:style/Widget.DeviceDefault.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="3"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:src="@android:drawable/ic_input_delete"
                android:tint="#000000"
                tools:src="@android:drawable/ic_input_delete"
                android:onClick="onClickErase" />
            </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:onClick="onClickClear"
                android:text="@string/clear"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/opening_parenthesis"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:text="@string/opening_parenthesis"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
            <Button
                android:id="@+id/closing_parenthesis"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/closing_parenthesis"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
            <Button
                android:id="@+id/multiplication"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/multiplication"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:onClick="onClickAdd"
                android:text="@string/seven"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/eight"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nine"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
            <Button
                android:id="@+id/division"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/division"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/four"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/five"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/six"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
            <Button
                android:id="@+id/sum"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sum"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/one"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
            <Button
                android:id="@+id/difference"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/difference"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
            <Button
                android:id="@+id/dot"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dot"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickAdd"/>
            <Button
                android:id="@+id/count"
                style="@style/Widget.AppCompat.Button"
                android:layout_column="2"
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/count"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:onClick="onClickCalculate"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
